# Portpeek

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Actions.ts  DetailsPanel.tsx  FilterBar.tsx  PortTable.tsx  SearchBar.tsx  SettingsPanel.tsx
src/services/: detectionService.ts  portService.ts  settingsService.ts
